add default jvmopts